@@ -12,11 +12,13 @@ class DialogExistingDbs : public QDialog
     Q_OBJECT
 
 public:
-    explicit DialogExistingDbs(QWidget *parent = nullptr);
+    explicit DialogExistingDbs(const QStringList &fileList, QWidget *parent = nullptr);
     ~DialogExistingDbs();
+
+    QString curFile();
 
 private:
     Ui::DialogExistingDbs *ui;
-};
+}; // class DialogExistingDbs
 
 #endif // DIALOGEXISTINGDBS_H
