@@ -81,8 +81,8 @@ public:
 
     // checks whether there are any (or filtered) files the folder/subfolders
     static bool isEmptyFolder(const QString &folderPath, const FilterRule &filter = FilterRule(false));
-    static QString firstDbFile(const QString &folderPath);
-    static QStringList dbFiles(const QString &folderPath);
+    static QString firstDbFile(const QString &folderPath); // returns full path
+    static QStringList dbFiles(const QString &folderPath); // file names only
 
     static const QString desktopFolderPath; // path to the user's Desktop folder
 
