@@ -95,7 +95,7 @@ signals:
     void setStatusbarText(const QString &text = QString()); // send the 'text' to statusbar
     void setViewData(DataContainer *data = nullptr);
     void folderContentsListCreated(const QString &folderPath, const QList<ExtNumSize> &extList);
-    void folderContentsFilterCreated(const QString &folderPath, const QList<ExtNumSize> &extList);
+    void dbCreationDataCollected(const QString &folderPath, const QStringList &dbFiles, const QList<ExtNumSize> &extList);
     void dbContentsListCreated(const QString &folderPath, const QList<ExtNumSize> &extList);
     void folderChecked(const Numbers &result, const QString &subFolder = QString());
     void fileProcessed(const QString &fileName, const FileValues &result);
